Commit to let installer do file association rather than the application, correction of deprecated Java code, streamlined javafx references